-- Added new includes for HomeMainMenuLow and HomeNowPlayingLowMenu
-- Added new media flags and option in skin settings to turn them on
-- Changed recently added again
-- moved clock around a bit
-- recently added changed "playedonly" option to false (all movies appear in recently added)
-- Complete overhaul of now playing and recently added for both horz and vert menus 

2.0
-- Added Coverflow music view
-- Added Coverflow movies view
-- Added new movies view "Bigposter"
-- Added Fanart view to music
-- Added option to turn on cases or clear cases on for bigposter view
-- Changed DVD/Bluray cases on righlist view are now dependent on the video resolution, rather than the filename hack
-- Removed the bluray/dvd logos - decided that the other resolution flags were enough.
-- Changed fanart episodes a bit (when info is off)
-- Changed Wall music view - changed highlight to white (like other views) and respaced the panel a bit.
-- Added (RE-added) normal cases (as opposed to clear cases) option to rightlist movies
-- Changed Darkened the background more on the video info screen
-- Changed Moved album info to the right when cdart is enabled so the labels don't cover the precious cdart
-- Changed Slowed down the cdart spin speed a bit more so you can see the precious cdart better
-- Changed the seekbar so it doesn't appear when video info is up
-- Changed the video info bar so it shows "paused" when a video is paused
-- Added option to use logos for list on TV Shows level fanart view (tried banners but too wide so can only fit 2 or 3 on screen at once)
-- Changed the appearance of the views menu (the one that slides out from the right)
-- **Big** code cleanup
-- Fixed up 2 bugs which caused UK MPAA ratings to fail (thanks nordstar)
-- Reduced the corner curve of masks and borders all over the place
-- Changed the context menu - looks a lot beter now, plus resizes dynamically according to number of items in menu
-- Added Horizontal home menu