@@ -8,6 +8,7 @@
 -- moved clock around a bit
 -- recently added changed "playedonly" option to false (all movies appear in recently added)
 -- Complete overhaul of now playing and recently added for both horz and vert menus 
+-- Added new skin setting menu items for extra addons/mods/scripts etc
 
 2.0
 -- Added Coverflow music view
